fix sidebar menu button elevation overflow

--- a/src/css/ha-sidebar.css
+++ b/src/css/ha-sidebar.css
@@ -20,6 +20,7 @@
 .menu {
 	width: min-content;
 	margin-inline-start: 28px;
+	overflow: visible;
 	padding: 0;
 	border-width: 0;
 
